--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -1,3 +1,10 @@
 @import "include/util";
 @import "include/components";
-@import "../Components/Navbar/_Navbar"
+@import "../Components/Navbar/Navbar";
+@import "include/homepage"
+
+
+// /* body{
+//     background: "
+// } */
+
