--- a/src/Styles/include/_util.scss
+++ b/src/Styles/include/_util.scss
@@ -25,3 +25,26 @@ html, body{
         color:$brand-secondary;
     }
 }
+.container{
+    max-width: 1024px !important;
+}
+.services-card{
+    .card{
+        border: none;
+
+        .card-img-top{
+            width:100%;
+            height:200px;
+            object-fit: fill;
+        }
+
+        .card-title{
+            font-weight: 400;
+            font-size:22px;
+        }
+        .card-text{
+            font-size: 12px;
+            color:dimgray;
+        }
+    }
+}
