--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -20,6 +20,31 @@ html, body {
   color: #843795;
 }
 
+.container {
+  max-width: 1024px !important;
+}
+
+.services-card .card {
+  border: none;
+}
+
+.services-card .card .card-img-top {
+  width: 100%;
+  height: 200px;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.services-card .card .card-title {
+  font-weight: 400;
+  font-size: 22px;
+}
+
+.services-card .card .card-text {
+  font-size: 12px;
+  color: dimgray;
+}
+
 .hnazmul-navbar {
   display: -webkit-box;
   display: -ms-flexbox;
