--- a/src/Styles/include/_homepage.scss
+++ b/src/Styles/include/_homepage.scss
@@ -95,3 +95,54 @@
         }
     }
 }
+
+#fitness{
+    padding:2rem;
+    div.title{
+        max-width:430px;
+        margin: auto;;
+        text-align: center;
+        padding:2rem;
+        h1{
+            font-size:30px;
+        }
+    }
+
+    #image-card{
+        padding:20px;
+        text-align: center;
+        img{
+            width:100%;
+            height:350px;
+            object-fit: cover;
+
+        }
+    }
+
+    .bottom-text{
+        max-width:700px;
+        margin:auto;
+        text-align: center;
+        margin-top:20px;
+    }
+}
+
+#Skills{
+    background-color: #393637;
+    padding:2rem;
+    color:white;
+
+    &>.title{
+        margin: auto;
+        max-width: 500px;
+        padding:2rem;
+        h1{
+            font-size:30px;
+        }
+
+    }
+
+    #circle-image-card{
+        color:white;
+    }
+}
