--- a/src/Styles/include/_homepage.scss
+++ b/src/Styles/include/_homepage.scss
@@ -1,3 +1,4 @@
+/* home page header */
 .home-page-header {
     width: 100%;
     padding: 70px 0px;
@@ -33,6 +34,8 @@
         }
     }
 }
+
+/* palitates card section start from here */
 .pilates-card {
     background: url(../images/F0WzpR-GJl8.png) no-repeat center;
     background-color: rgba(0, 0, 0, 0.534);
@@ -63,6 +66,7 @@
     }
 }
 
+/* mirror section start from here */
 #mirror {
     padding: 3rem 0px;
     .title {
@@ -96,6 +100,7 @@
     }
 }
 
+/* fitness section start form her */
 #fitness{
     padding:2rem;
     div.title{
@@ -127,6 +132,7 @@
     }
 }
 
+/* skills section start from here */
 #Skills{
     background-color: #393637;
     padding:2rem;
@@ -147,8 +153,10 @@
     }
 }
 
+/* contents section here */
 #contents{
-    padding:2rem;
+    padding:3rem;
+    padding-bottom: 5rem;
     .title{
         padding: 2rem;
     }
@@ -171,9 +179,32 @@
     }
 }
 
+/* practice images */
 #practice-image{
     padding:20vw 2rem;
     background:url(../images/pracice-image.png) no-repeat center;
     background-size: cover;
     
+}
+
+/* faq under brand color bar */
+#under-faq{
+    padding:2rem;
+    background: $brand-color;
+}
+
+footer#footer{
+    background:#191A1E;
+    padding:4rem;
+    .title{
+        color:white;
+        margin-bottom: 40px;
+    }
+    &>.container{
+        .footer-content{
+            max-width:450px;
+            margin: auto;
+
+        }
+    }
 }
