--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -147,6 +147,47 @@ html, body {
   color: #FC3288;
 }
 
+/* faq card css here */
+#faq-card {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+
+#faq-card.active {
+  background: #ffedfd;
+  border: 1px solid;
+  border-color: lightgray lightgray transparent lightgray;
+}
+
+#faq-card.active .faq-label a {
+  color: #FC3288 !important;
+}
+
+#faq-card.active .faq-label .icon {
+  color: #FC3288;
+}
+
+#faq-card .faq-label {
+  position: relative;
+  z-index: 1;
+}
+
+#faq-card .faq-label .icon {
+  position: absolute;
+  top: 7px;
+  right: 10px;
+  font-size: 20px;
+}
+
+#faq-card .faq-label a {
+  width: 100%;
+  padding: 10px 20px;
+  display: inline-block;
+  text-align: left;
+  text-decoration: none;
+  color: #303030;
+}
+
 .hnazmul-navbar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -315,6 +356,7 @@ html, body {
   padding: 27px;
 }
 
+/* home page header */
 .home-page-header {
   width: 100%;
   padding: 70px 0px;
@@ -353,6 +395,7 @@ html, body {
   color: rgba(0, 0, 0, 0.349);
 }
 
+/* palitates card section start from here */
 .pilates-card {
   background: url(../images/F0WzpR-GJl8.png) no-repeat center;
   background-color: rgba(0, 0, 0, 0.534);
@@ -387,6 +430,7 @@ html, body {
   margin: 2px 10px;
 }
 
+/* mirror section start from here */
 #mirror {
   padding: 3rem 0px;
 }
@@ -416,6 +460,7 @@ html, body {
   width: 100% !important;
 }
 
+/* fitness section start form her */
 #fitness {
   padding: 2rem;
 }
@@ -450,6 +495,7 @@ html, body {
   margin-top: 20px;
 }
 
+/* skills section start from here */
 #Skills {
   background-color: #393637;
   padding: 2rem;
@@ -470,8 +516,10 @@ html, body {
   color: white;
 }
 
+/* contents section here */
 #contents {
-  padding: 2rem;
+  padding: 3rem;
+  padding-bottom: 5rem;
 }
 
 #contents .title {
@@ -495,9 +543,31 @@ html, body {
   font-size: 14px;
 }
 
+/* practice images */
 #practice-image {
   padding: 20vw 2rem;
   background: url(../images/pracice-image.png) no-repeat center;
   background-size: cover;
+}
+
+/* faq under brand color bar */
+#under-faq {
+  padding: 2rem;
+  background: #FC3288;
+}
+
+footer#footer {
+  background: #191A1E;
+  padding: 4rem;
+}
+
+footer#footer .title {
+  color: white;
+  margin-bottom: 40px;
+}
+
+footer#footer > .container .footer-content {
+  max-width: 450px;
+  margin: auto;
 }
 /*# sourceMappingURL=style.css.map */
