Project design completed

--- a/src/Components/Navbar/_Navbar.scss
+++ b/src/Components/Navbar/_Navbar.scss
@@ -5,7 +5,8 @@
     box-shadow: 0px 2px 2px 2px #3b3b3b13,
     0px 7px 10px -10px rgba(0, 0, 0, 0.336);
     position: fixed;
-    background: white;
+    background: #10151B;
+    color:white;
     z-index: 1000;
     .hnazmul-navbar-container {
         width: 100%;
@@ -40,13 +41,13 @@
                     li.navbar-list-item {
                         list-style: none;
                         .navbar-list-link{
-                            color: black;
+                            color: white;
                             text-decoration: none;
                             display: inline-block;
                             padding: 15px 20px;
 
                             &.active{
-                                background:red;
+                                background:#FC3288;
                                 color:white;
 
                             }
