--- a/src/Styles/include/_homepage.scss
+++ b/src/Styles/include/_homepage.scss
@@ -101,110 +101,152 @@
 }
 
 /* fitness section start form her */
-#fitness{
-    padding:2rem;
-    div.title{
-        max-width:430px;
-        margin: auto;;
+#fitness {
+    padding: 2rem;
+    div.title {
+        max-width: 430px;
+        margin: auto;
         text-align: center;
-        padding:2rem;
-        h1{
-            font-size:30px;
+        padding: 2rem;
+        h1 {
+            font-size: 30px;
         }
     }
 
-    #image-card{
-        padding:20px;
+    #image-card {
+        padding: 20px;
         text-align: center;
-        img{
-            width:100%;
-            height:350px;
+        img {
+            width: 100%;
+            height: 350px;
             object-fit: cover;
-
         }
     }
 
-    .bottom-text{
-        max-width:700px;
-        margin:auto;
+    .bottom-text {
+        max-width: 700px;
+        margin: auto;
         text-align: center;
-        margin-top:20px;
+        margin-top: 20px;
     }
 }
 
 /* skills section start from here */
-#Skills{
+#Skills {
     background-color: #393637;
-    padding:2rem;
-    color:white;
+    padding: 2rem;
+    color: white;
 
-    &>.title{
+    & > .title {
         margin: auto;
         max-width: 500px;
-        padding:2rem;
-        h1{
-            font-size:30px;
+        padding: 2rem;
+        h1 {
+            font-size: 30px;
         }
-
     }
 
-    #circle-image-card{
-        color:white;
+    #circle-image-card {
+        color: white;
     }
 }
 
 /* contents section here */
-#contents{
-    padding:3rem;
+#contents {
+    padding: 3rem;
     padding-bottom: 5rem;
-    .title{
+    .title {
         padding: 2rem;
     }
-    .content-card{
-        .content-card-img{
-            img{
-                width:100%;
+    .content-card {
+        .content-card-img {
+            img {
+                width: 100%;
             }
         }
-        div.content-card-desc{
+        div.content-card-desc {
             text-align: center;
-            padding: 5px;;
-            h4{
-                font-size:20px;
+            padding: 5px;
+            h4 {
+                font-size: 20px;
             }
-            p{
-                font-size:14px;
+            p {
+                font-size: 14px;
             }
         }
     }
 }
 
 /* practice images */
-#practice-image{
-    padding:20vw 2rem;
-    background:url(../images/pracice-image.png) no-repeat center;
+#practice-image {
+    padding: 20vw 2rem;
+    background: url(../images/pracice-image.png) no-repeat center;
     background-size: cover;
-    
 }
 
 /* faq under brand color bar */
-#under-faq{
-    padding:2rem;
+#under-faq {
+    padding: 2rem;
     background: $brand-color;
 }
 
-footer#footer{
-    background:#191A1E;
-    padding:4rem;
-    .title{
-        color:white;
+footer#footer {
+    background: #191a1e;
+    padding: 4rem;
+    .title {
+        color: white;
         margin-bottom: 40px;
     }
-    &>.container{
-        .footer-content{
-            max-width:450px;
+    & > .container {
+        .footer-content {
+            max-width: 400px;
             margin: auto;
-
         }
+    }
+}
+
+/* footer gellery css here */
+#footer-gellery {
+    .images-container {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+    }
+}
+/* info data -table css here */
+#info-data-table{
+    .info {
+        background-color: #fff;
+        text-align: center;
+        border-bottom: 1px solid #828282;
+        padding: 20px 0;
+    }
+
+    .info .info-heading {
+        padding: 50px 0;
+        border-bottom: 4px solid #333333;
+    }
+
+    .info .info-heading h2 {
+        font-weight: 700;
+        color: #333333;
+        font-size: 36px;
+    }
+
+    .info .info-row .info-contant {
+        margin-top: 20px;
+    }
+
+    .info .info-row .info-contant button {
+        border: none;
+        padding: 10px 35px;
+        margin-right: 20px;
+    }
+
+    .info .info-row .info-contant p {
+        margin: 0;
+        padding-top: 10px;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
     }
 }
