--- a/src/Styles/include/_util.scss
+++ b/src/Styles/include/_util.scss
@@ -1,52 +1,124 @@
-$brand-color:#FC3288;
-$brand-gradient:linear-gradient(93.58deg, #FC3288 0%, #843795 100%);;
-$brand-secondary:#843795;
+$brand-color: #fc3288;
+$brand-gradient: linear-gradient(93.58deg, #fc3288 0%, #843795 100%);
+$brand-secondary: #843795;
 
-.theme-btn{
-    background:$brand-color !important;
-    border:none;
-    padding:10px 20px;
+.theme-btn {
+    background: $brand-color !important;
+    border: none;
+    padding: 10px 20px;
 }
-.theme-text{
-    color:$brand-color;
+.theme-text {
+    color: $brand-color;
 }
-html, body{
+html,
+body {
     overflow-x: hidden;
 }
 
-.theme-gd-btn{
-    background:$brand-gradient;
+.theme-gd-btn {
+    background: $brand-gradient;
 }
 
-.theme-seconday{
-    &.btn{
-        background:$brand-secondary;
-
+.theme-seconday {
+    &.btn {
+        background: $brand-secondary;
     }
-    &.text{
-        color:$brand-secondary;
+    &.text {
+        color: $brand-secondary;
     }
 }
-.container{
+.container {
     max-width: 1024px !important;
 }
-.services-card{
-    .card{
+.services-card {
+    .card {
         border: none;
 
-        .card-img-top{
-            width:100%;
-            height:200px;
+        .card-img-top {
+            width: 100%;
+            height: 200px;
             object-fit: fill;
         }
 
-        .card-title{
+        .card-title {
             font-weight: 400;
-            font-size:22px;
+            font-size: 22px;
         }
-        .card-text{
+        .card-text {
             font-size: 12px;
-            color:dimgray;
+            color: dimgray;
+        }
+    }
+}
+
+/* slider custom arrow */
+.slick-arrow.slick-prev {
+    &::before {
+        content: "";
+        display: inline-block;
+        width: 51px;
+        height: 42px;
+        vertical-align: -0.125em;
+        background: url("https://api.iconify.design/grommet-icons/previous.svg?color=%23d1d1d1") no-repeat center center / contain;
+    }
+}
+.slick-arrow.slick-next {
+    &::before {
+        content: "";
+        display: inline-block;
+        width: 51px;
+        height: 42px;
+        vertical-align: -0.125em;
+        background: url("https://api.iconify.design/grommet-icons/next.svg?color=%23d1d1d1") no-repeat center center / contain;
+    }
+}
+
+/* palitates card section start from here */
+.pilates-card {
+    background: url(../images/F0WzpR-GJl8.png) no-repeat center;
+    background-color: rgba(0, 0, 0, 0.534);
+    background-blend-mode: soft-light;
+    background-size: cover;
+    height: 400px;
+    width: 350px;
+    color: white;
+    margin: auto;
+    position: fixed;
+    z-index: 1001;
+    top:50%;
+    left:70%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0px 8px 24px rgba(17, 17, 26, 0.1), 0px 16px 56px rgba(17, 17, 26, 0.1), 0px 24px 80px rgba(17, 17, 26, 0.1);
+
+    .card-wrapper {
+        height: 100%;
+        width: 100%;
+        position: relative;
+        z-index: 1;
+        .event {
+            color: #ae4dc4;
+        }
+        .bottom-bar {
+            position: absolute;
+            bottom: 0px;
+            background: rgb(54, 54, 54);
+            text-align: right;
+            width: 100%;
+            left: 0px;
+            padding: 5px;
+            input[type="checkbox"] {
+                transform: scale(1.2);
+                margin: 2px 10px;
+            }
+        }
+        .times-icon{
+            position: absolute;
+            top:10px;
+            right:10px;
+            z-index: 1;
+            font-size: 35px;
+            padding:5px;
+            cursor: pointer;
         }
     }
 }
