--- a/src/Styles/include/_homepage.scss
+++ b/src/Styles/include/_homepage.scss
@@ -5,7 +5,7 @@
         background: rgba(0, 0, 0, 0.39) url(../images/home.svg) no-repeat center;
         background-size: cover;
         background-blend-mode: soft-light;
-        padding:2rem;
+        padding: 2rem;
         & > .container {
             display: flex;
             align-items: center;
@@ -15,6 +15,7 @@
                 h1 {
                     margin-bottom: 20px;
                     font-weight: bolder;
+                    font-size: 60px;
                 }
             }
         }
@@ -27,12 +28,12 @@
         right: 4.5%;
         z-index: 1;
     }
-    @media screen and (max-width:1025px) {
-        .slick-arrow.slick-prev{
-            left:-1%;
+    @media screen and (max-width: 1025px) {
+        .slick-arrow.slick-prev {
+            left: -1%;
         }
-        .slick-arrow.slick-next{
-            right:6%;
+        .slick-arrow.slick-next {
+            right: 6%;
         }
     }
 }
@@ -43,13 +44,17 @@
     .title {
         max-width: 400px;
         margin: auto;
+        padding: 2rem 0px;
         h1 {
             font-size: 30px;
+            margin-bottom: 20px;
+            @extend .font-default;
             font-weight: 900;
         }
         p {
             font-size: 15px;
-            color: dimgray;
+            color: rgb(95, 95, 95);
+            font-weight: bolder;
         }
     }
     .slick-arrow {
@@ -79,8 +84,10 @@
         margin: auto;
         text-align: center;
         padding: 2rem;
+        @extend .font-default;
         h1 {
             font-size: 30px;
+            font-weight: 900;
         }
     }
 
@@ -103,26 +110,25 @@
     .slick-arrow {
         z-index: 5;
         &.slick-prev {
-            left: -6.2%;
-            top: 32.3%;
-            &::before{
-               background:  url("https://api.iconify.design/grommet-icons/previous.svg?color=black") no-repeat center center/contain
+            left: -25px;
+            top: 117px;
+            &::before {
+                background: url("https://api.iconify.design/grommet-icons/previous.svg?color=black") no-repeat center center/contain;
             }
         }
         &.slick-next {
-            right: 6.2%;
-            top: 32.3%;
-            &::before{
-               background:  url("https://api.iconify.design/grommet-icons/next.svg?color=black") no-repeat center center/contain
+            right: -25px;
+            top: 117px;
+            &::before {
+                background: url("https://api.iconify.design/grommet-icons/next.svg?color=black") no-repeat center center/contain;
             }
-
         }
     }
 
-    @media screen and (max-width:768px) {
-        .slick-arrow{
-            &.slick-next{
-                right:0%;
+    @media screen and (max-width: 768px) {
+        .slick-arrow {
+            &.slick-next {
+                right: 0%;
             }
         }
     }
@@ -152,20 +158,27 @@
     }
 
     .slick-arrow {
+        z-index: 5;
         &.slick-prev {
-            left: -6.2%;
-            top: 32.3%;
+            left: -25px;
+            top: 117px;
+            &::before {
+                background: url("https://api.iconify.design/grommet-icons/previous.svg?color=dimgrey") no-repeat center center/contain;
+            }
         }
         &.slick-next {
-            right: 6.2%;
-            top: 32.3%;
+            right: -25px;
+            top: 117px;
+            &::before {
+                background: url("https://api.iconify.design/grommet-icons/next.svg?color=dimgrey") no-repeat center center/contain;
+            }
         }
     }
 
-    @media screen and (max-width:768px) {
-        .slick-arrow{
-            &.slick-next{
-                right:4%;
+    @media screen and (max-width: 768px) {
+        .slick-arrow {
+            &.slick-next {
+                right: 4%;
             }
         }
     }
@@ -175,8 +188,8 @@
 #contents {
     padding: 3rem;
     padding-bottom: 5rem;
-    @media screen and (max-width:800px) {
-        padding:1rem 1rem 5rem 1rem
+    @media screen and (max-width: 800px) {
+        padding: 1rem 1rem 5rem 1rem;
     }
     .title {
         padding: 2rem;
@@ -203,24 +216,23 @@
         &.slick-prev {
             left: -33px;
             top: 32.3%;
-            &::before{
-               background:  url("https://api.iconify.design/grommet-icons/previous.svg?color=black") no-repeat center center/contain
+            &::before {
+                background: url("https://api.iconify.design/grommet-icons/previous.svg?color=black") no-repeat center center/contain;
             }
         }
         &.slick-next {
-            right:0%;
+            right: 0%;
             top: 32.3%;
-            &::before{
-               background:  url("https://api.iconify.design/grommet-icons/next.svg?color=black") no-repeat center center/contain
+            &::before {
+                background: url("https://api.iconify.design/grommet-icons/next.svg?color=black") no-repeat center center/contain;
             }
-
         }
     }
 
-    @media screen and (max-width:768px) {
-        .slick-arrow{
-            &.slick-next{
-                right:-2%;
+    @media screen and (max-width: 768px) {
+        .slick-arrow {
+            &.slick-next {
+                right: -2%;
             }
         }
     }
@@ -264,23 +276,23 @@ footer#footer {
 /* info data -table css here */
 #info-data-table {
     padding: 3rem;
-    padding-bottom: 5rem;
-    @media screen and (max-width:800px) {
-        padding:1rem 1rem 5rem 1rem
+    padding-bottom: 2rem;
+    @media screen and (max-width: 800px) {
+        padding: 1rem 1rem 5rem 1rem;
     }
-    .title{
-        padding:2rem;
+    .title {
+        padding: 2rem;
         margin-bottom: 1rem;
         border-bottom: 1px solid #000;
     }
 
-    &>.container{
-        &>.table-container{
-            &>.col-md-6{
-                &>.row{
-                    padding:20px;
+    & > .container {
+        & > .table-container {
+            & > .col-md-6 {
+                & > .row {
+                    padding: 20px;
                 }
             }
         }
     }
-}   
+}
