--- a/src/Styles/include/_util.scss
+++ b/src/Styles/include/_util.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@100;200;300;400;500;600;700;800;900&display=swap');
 $brand-color: #fc3288;
 $brand-gradient: linear-gradient(93.58deg, #fc3288 0%, #843795 100%);
 $brand-secondary: #843795;
@@ -9,6 +10,9 @@ $brand-secondary: #843795;
 }
 .theme-text {
     color: $brand-color;
+}
+.font-default{
+    font-family: 'Hahmlet', serif;
 }
 html,
 body {
