--- a/src/Styles/include/_util.scss
+++ b/src/Styles/include/_util.scss
@@ -94,6 +94,9 @@ body {
     transform: translate(-50%, -50%);
     box-shadow: 0px 8px 24px rgba(17, 17, 26, 0.1), 0px 16px 56px rgba(17, 17, 26, 0.1), 0px 24px 80px rgba(17, 17, 26, 0.1);
 
+    @media screen and (max-width:992px) {
+        left:50%;
+    }
     .card-wrapper {
         height: 100%;
         width: 100%;
