--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -95,6 +95,12 @@ body {
           box-shadow: 0px 8px 24px rgba(17, 17, 26, 0.1), 0px 16px 56px rgba(17, 17, 26, 0.1), 0px 24px 80px rgba(17, 17, 26, 0.1);
 }
 
+@media screen and (max-width: 992px) {
+  .pilates-card {
+    left: 50%;
+  }
+}
+
 .pilates-card .card-wrapper {
   height: 100%;
   width: 100%;
@@ -225,6 +231,12 @@ body {
           transform: translate(-50%, -50%);
   -webkit-box-shadow: 0px 8px 24px rgba(17, 17, 26, 0.1), 0px 16px 56px rgba(17, 17, 26, 0.1), 0px 24px 80px rgba(17, 17, 26, 0.1);
           box-shadow: 0px 8px 24px rgba(17, 17, 26, 0.1), 0px 16px 56px rgba(17, 17, 26, 0.1), 0px 24px 80px rgba(17, 17, 26, 0.1);
+}
+
+@media screen and (max-width: 992px) {
+  .pilates-card {
+    left: 50%;
+  }
 }
 
 .pilates-card .card-wrapper {
