--- a/src/Styles/include/_util.scss
+++ b/src/Styles/include/_util.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 $brand-color: #fc3288;
 $brand-gradient: linear-gradient(93.58deg, #fc3288 0%, #843795 100%);
 $brand-secondary: #843795;
