--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Hahmlet:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+* {
+  font-family: 'Noto Sans KR', sans-serif !important;
+}
+
 .theme-btn {
   background: #fc3288 !important;
   border: none;
@@ -13,7 +17,7 @@
 }
 
 .font-default, #mirror .title h1, #fitness div.title {
-  font-family: 'Hahmlet', serif;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 html,
@@ -140,6 +144,10 @@ body {
   cursor: pointer;
 }
 
+* {
+  font-family: 'Noto Sans KR', sans-serif !important;
+}
+
 .theme-btn {
   background: #fc3288 !important;
   border: none;
@@ -151,7 +159,7 @@ body {
 }
 
 .font-default, #mirror .title h1, #fitness div.title {
-  font-family: 'Hahmlet', serif;
+  font-family: 'Noto Sans KR', sans-serif;
 }
 
 html,
