--- a/src/Styles/include/_homepage.scss
+++ b/src/Styles/include/_homepage.scss
@@ -49,7 +49,7 @@
             font-size: 30px;
             margin-bottom: 20px;
             @extend .font-default;
-            font-weight: 900;
+            font-weight: 700;
         }
         p {
             font-size: 15px;
@@ -87,7 +87,7 @@
         @extend .font-default;
         h1 {
             font-size: 30px;
-            font-weight: 900;
+            font-weight: 700;
         }
     }
 
@@ -158,14 +158,14 @@
     .slick-arrow {
         z-index: 5;
         &.slick-prev {
-            left: -25px;
+            left: -90px;
             top: 117px;
             &::before {
                 background: url("https://api.iconify.design/grommet-icons/previous.svg?color=dimgrey") no-repeat center center/contain;
             }
         }
         &.slick-next {
-            right: -25px;
+            right: -65px;
             top: 117px;
             &::before {
                 background: url("https://api.iconify.design/grommet-icons/next.svg?color=dimgrey") no-repeat center center/contain;
@@ -173,10 +173,13 @@
         }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1210px) {
         .slick-arrow {
             &.slick-next {
-                right: 4%;
+                right: -10px;
+            }
+            &.slick-prev {
+                left: -30px;
             }
         }
     }
@@ -212,14 +215,14 @@
     .slick-arrow {
         z-index: 5;
         &.slick-prev {
-            left: -33px;
+            left: -83px;
             top: 32.3%;
             &::before {
                 background: url("https://api.iconify.design/grommet-icons/previous.svg?color=black") no-repeat center center/contain;
             }
         }
         &.slick-next {
-            right: 0%;
+            right: -40px;
             top: 32.3%;
             &::before {
                 background: url("https://api.iconify.design/grommet-icons/next.svg?color=black") no-repeat center center/contain;
@@ -227,8 +230,11 @@
         }
     }
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 998px) {
         .slick-arrow {
+            &.slick-prev {
+                left: -9%;
+            }
             &.slick-next {
                 right: -2%;
             }
@@ -281,7 +287,7 @@ footer#footer {
     .title {
         padding: 2rem;
         margin-bottom: 1rem;
-        border-bottom: 1px solid #000;
+        border-bottom: 4px solid rgb(90, 90, 90);
     }
 
     & > .container {
@@ -289,6 +295,10 @@ footer#footer {
             & > .col-md-6 {
                 & > .row {
                     padding: 20px;
+                    &>div {
+                        font-weight: 400;
+                        color:rgb(49, 49, 49);
+                    }
                 }
             }
         }
