--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -402,7 +402,6 @@ body {
 
 .hnazmul-navbar .hnazmul-navbar-container {
   width: 100%;
-  max-width: 1200px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -620,7 +619,7 @@ body {
 #mirror .title h1 {
   font-size: 30px;
   margin-bottom: 20px;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 #mirror .title p {
@@ -653,7 +652,7 @@ body {
 
 #fitness div.title h1 {
   font-size: 30px;
-  font-weight: 900;
+  font-weight: 700;
 }
 
 #fitness #image-card {
@@ -727,7 +726,7 @@ body {
 }
 
 #Skills .slick-arrow.slick-prev {
-  left: -25px;
+  left: -90px;
   top: 117px;
 }
 
@@ -736,7 +735,7 @@ body {
 }
 
 #Skills .slick-arrow.slick-next {
-  right: -25px;
+  right: -65px;
   top: 117px;
 }
 
@@ -744,9 +743,12 @@ body {
   background: url("https://api.iconify.design/grommet-icons/next.svg?color=dimgrey") no-repeat center center/contain;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1210px) {
   #Skills .slick-arrow.slick-next {
-    right: 4%;
+    right: -10px;
+  }
+  #Skills .slick-arrow.slick-prev {
+    left: -30px;
   }
 }
 
@@ -788,7 +790,7 @@ body {
 }
 
 #contents .slick-arrow.slick-prev {
-  left: -33px;
+  left: -83px;
   top: 32.3%;
 }
 
@@ -797,7 +799,7 @@ body {
 }
 
 #contents .slick-arrow.slick-next {
-  right: 0%;
+  right: -40px;
   top: 32.3%;
 }
 
@@ -805,7 +807,10 @@ body {
   background: url("https://api.iconify.design/grommet-icons/next.svg?color=black") no-repeat center center/contain;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 998px) {
+  #contents .slick-arrow.slick-prev {
+    left: -9%;
+  }
   #contents .slick-arrow.slick-next {
     right: -2%;
   }
@@ -862,10 +867,15 @@ footer#footer > .container .footer-content {
 #info-data-table .title {
   padding: 2rem;
   margin-bottom: 1rem;
-  border-bottom: 1px solid #000;
+  border-bottom: 4px solid #5a5a5a;
 }
 
 #info-data-table > .container > .table-container > .col-md-6 > .row {
   padding: 20px;
+}
+
+#info-data-table > .container > .table-container > .col-md-6 > .row > div {
+  font-weight: 400;
+  color: #313131;
 }
 /*# sourceMappingURL=style.css.map */
